# TeRmalM

./: .gitignore  LICENSE  README.md  README.zh.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
